# routes/users.js
@@ -1,39 +1,53 @@
 const router = require('express').Router();
 const usersController = require('../controllers/users');
 
-// #swagger.tags = ['Users']
-router.get('/', usersController.getAll);
-// #swagger.tags = ['Users']
-// #swagger.parameters['id'] = { in: 'path', required: true, type: 'string' }
-router.get('/:id', usersController.getSingle);
-// #swagger.tags = ['Users']
-// #swagger.parameters['body'] = {
-// #swagger.in = 'body'
-// #swagger.schema = {
-//   firstName: 'Gino',
-//   lastName: 'Rojo',
-//   email: 'gino@email.com',
-//   favoriteColor: 'blue',
-//   birthday: '2000-01-01'
-// }
-// }
-router.post('/', usersController.createUsers);
-// #swagger.tags = ['Users']
-// #swagger.parameters['id'] = { in: 'path', required: true, type: 'string' }
-// #swagger.parameters['body'] = {
-// #swagger.in = 'body'
-// #swagger.schema = {
-//   firstName: 'Gino',
-//   lastName: 'Rojo',
-//   email: 'gino@email.com',
-//   favoriteColor: 'blue',
-//   birthday: '2000-01-01'
-// }
-// }
-router.put('/:id', usersController.updateUsers);
-// #swagger.tags = ['Users']
-// #swagger.parameters['id'] = { in: 'path', required: true, type: 'string' }
-router.delete('/:id', usersController.deleteUsers);
+router.get('/', (req, res) => {
+  //#swagger.tags = ['Users']
+  usersController.getAll(req, res);
+});
+
+router.get('/:id', (req, res) => {
+  //#swagger.tags = ['Users']
+  //#swagger.parameters['id'] = { in: 'path', required: true, type: 'string' }
+  usersController.getSingle(req, res);
+});
+
+router.post('/', (req, res) => {
+  //#swagger.tags = ['Users']
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        schema: {
+          firstName: 'Gino',
+          lastName: 'Rojo',
+          email: 'gino@email.com',
+          favoriteColor: 'blue',
+          ipaddress: '94.121.168.53'
+        }
+  } */
+  usersController.createUsers(req, res);
+});
+
+router.put('/:id', (req, res) => {
+  //#swagger.tags = ['Users']
+  //#swagger.parameters['id'] = { in: 'path', required: true, type: 'string' }
+  /* #swagger.parameters['body'] = {
+        in: 'body',
+        schema: {
+          firstName: 'Gino',
+          lastName: 'Rojo',
+          email: 'gino@email.com',
+          favoriteColor: 'blue',
+          ipaddress: '94.121.168.53'
+        }
+  } */
+  usersController.updateUsers(req, res);
+});
+
+router.delete('/:id', (req, res) => {
+  //#swagger.tags = ['Users']
+  //#swagger.parameters['id'] = { in: 'path', required: true, type: 'string' }
+  usersController.deleteUsers(req, res);
+});
 
 
 module.exports = router;
